# gl_game

./: CMakeLists.txt
resources/meshes/: .triangle.json.swp  triangle.json
src/: .main.c.swp  .resources.c.swp  main.c  resources.c
test/: CMakeLists.txt  dirTest.c  test.c
